# panzer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  TODO.md  example.ipynb  pyproject.toml  requirements.txt  setup.py  trades.ipynb
examples/: 01_public_endpoints.ipynb  02_credentials_and_security.ipynb  03_authenticated_trading.ipynb  04_rate_limiting.ipynb  05_parallel_bulk.ipynb
panzer/: __init__.py  binance_api_map.py  credentials.py  crypto.py  errors.py  keys.py  limits.py  log_manager.py  logs.py  request.py  signatures.py  time.py  time_sync.py  trades.py  weights.py
panzer/exchanges/: __init__.py
panzer/exchanges/binance/: __init__.py  client.py  config.py  public.py  signer.py  weights.py
panzer/http/: __init__.py  client.py
panzer/rate_limit/: __init__.py  binance_fixed.py
tests/: DATA_PROPERTIES.md  conftest.py  exceptions.ipynb  keys.ipynb  limiter.ipynb  limits.ipynb  rate_limits_empirical.ipynb  test_credentials.py  test_crypto.py  test_data_properties.py  test_derivatives.py  test_signer.py
